# Choreonoid_Melew3Climb

./: README.md
catkin_ws/devel/: .catkin  (+1 more)
catkin_ws/devel/share/melew3_bringup/: package.xml
catkin_ws/src/MELEW-3/MELEW3_bringup/: CMakeLists.txt  README.md
catkin_ws/src/MELEW-3/MELEW3_bringup/model/: climbing.stl  duo_wallcopy.stl  duowalls.body  floor.body  slope0.body  slope20.body  slope30.body  wall-2.stl
catkin_ws/src/MELEW-3/MELEW3_bringup/model/MELEW3_stl/: body_short.STL  joint_p.STL  joint_y.STL  rotation_mark.STL  stator.STL
catkin_ws/src/MELEW-3/MELEW3_bringup/model/obstacle_stl/: obstacle_tunnel.STL
catkin_ws/src/MELEW-3/MELEW3_bringup/model/slope/: Ground.blend1  Ground.stl  Slope10.blend  Slope10.mtl  Slope10.stl  Slope20.blend  Slope30.blend  Slope30.stl
catkin_ws/src/MELEW-3/MELEW3_bringup/project/: MELEW3.cnoid  MELEW3.cnoid.bak  MELEW3_HVAC2022.cnoid  MELEW3_fixed.cnoid  MELEW3_jump.cnoid  MELEW3_s.cnoid  MELEW3_slope0.cnoid  MELEW3_slope10.cnoid  MELEW3_slope20.cnoid  MELEW3_slope30.cnoid  MELEW3_terrain.cnoid
catkin_ws/src/MELEW-3/MELEW3_bringup/src/: CMakeLists.txt  MELEW3LinkPublisher.cpp
catkin_ws/src/MELEW-3/MELEW3_control/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/MELEW-3/MELEW3_control/cfg/: joint_pd_gain.cfg
catkin_ws/src/MELEW-3/MELEW3_control/config/: MELEW3_control.yaml  MELEW3_group_position_control.yaml  MELEW3_link_info.yaml  MELEW3_real.yaml  MELEW3_sim.yaml
catkin_ws/src/MELEW-3/MELEW3_control/include/MELEW3_control/: BaseController.h  Calc_Matrix.hpp  Interpolator.h  MELEW3_HWI.h  MELEW3_fk_calculator.hpp  MELEW3_ik_calculator.hpp  MELEW3_trajectory_generator.hpp  QP_solve.hpp  VHIP.hpp  VHIP_AM.hpp  available_motors.h  basic_op.h  motor_status.h  param.hpp  timer.hpp  utils.hpp
catkin_ws/src/MELEW-3/MELEW3_control/launch/: melew3_control.launch  melew3_control_laptop.launch  melew3_control_nuc.launch  melew3_controller.launch  melew3_joint_control.launch  melew3_jumping_control.launch  melew3_jumping_controller.launch  melew3_motor_setting.launch
catkin_ws/src/MELEW-3/MELEW3_control/rviz/: MELEW3_sim.rviz
catkin_ws/src/MELEW-3/MELEW3_control/src/: CMakeLists.txt  MELEW3_HWI.cpp  MELEW3_control.cpp  MELEW3_fk_calculator.cpp  MELEW3_ik_calculator.cpp  MELEW3_trajectory_generator.cpp  basic_op.cpp  utils.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/Debug/: CMakeLists.txt  HWI_test.cpp  README.md  check_IK_FK_real.cpp  client_test.cpp  dynamic_reconfigure_client.cpp  dynamic_reconfigure_server.cpp  rosparam_load_test.cpp  test_joint_states_node.cpp  test_publisher.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/MELEW3_kinematics/: MELEW3_Kinematics.cpp  MELEW3_Kinematics.h  MELEW3_Kinematics2.cpp  MELEW3_Kinematics2.h
catkin_ws/src/MELEW-3/MELEW3_control/src/controllers/: BaseController.cpp  CMakeLists.txt  README.md  basic_pose.cpp  body_pitch_tilt.cpp  body_tilt_wheel_running.cpp  body_yaw_sine_wave.cpp  dancing.cpp  leg_turning.cpp  low_posture.cpp  lw_walk.cpp  offline.cpp  psi_sine_wave.cpp  slide.cpp  spiral.cpp  trans.cpp  trans2.cpp  trans3.cpp  turning.cpp  turning1.cpp  turning2.cpp  walk.cpp  wheel_running.cpp  wheel_running_several.cpp  wr_z_sine.cpp  x_sine_wave.cpp  y_sine_wave.cpp  z_sine_wave.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/jumping_control/: AM_jumping.cpp  CMakeLists.txt  Calc_Matrix.cpp  QP_solve.cpp  VHIP.cpp  VHIP_AM.cpp  body_tilt_jumping.cpp  jumping.cpp  param.cpp  pi_jumping.cpp  running.cpp  timer.cpp  z_jumping.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/jumping_control/stash/: AM_jump_save1.cpp  AM_jump_save2.cpp  jump_save1.cpp  jump_save2.cpp  jump_save3.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/: CMakeLists.txt  README.md  wheel_controller.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/config/: param.yaml  waypoint.yaml
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/launch/: melew_wheel_controller_node.launch  sne_controller_node.launch  wheel_controller.launch  zmp_generator_node.launch  zmp_preview_controller_node.launch
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/sne_controller/: CMakeLists.txt
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/sne_controller/include/sne_controller/: matplotlibcpp.h  nonlinear_equation_solver.cpp  nonlinear_equation_solver.hpp  plot_sne_contour3.hpp  sne_controller.hpp
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/sne_controller/src/: melew_wheel_controller_node.cpp  plot_sne_contour.cpp  plot_sne_contour2.cpp  plot_sne_contour3.cpp  sne_controller.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/zmp_generator/: CMakeLists.txt
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/zmp_generator/include/zmp_generator/: zmp_generator.hpp
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/zmp_generator/src/: zmp_generator.cpp  zmp_generator_node.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/zmp_preview_controller/: CMakeLists.txt
catkin_ws/src/MELEW-3/MELEW3_control/src/wheel_control/zmp_preview_controller/src/: zmp_preview_controller.cpp  zmp_preview_controller_node.cpp
catkin_ws/src/MELEW-3/MELEW3_control/src/zmp_calculator/: CMakeLists.txt  README.md
catkin_ws/src/MELEW-3/MELEW3_control/src/zmp_calculator/config/: param.yaml
catkin_ws/src/MELEW-3/MELEW3_control/src/zmp_calculator/include/zmp_calculator/: filter.hpp  izmp_calculator.hpp  zmp_calculator.hpp
catkin_ws/src/MELEW-3/MELEW3_control/src/zmp_calculator/launch/: zmp_calculator_node.launch
catkin_ws/src/MELEW-3/MELEW3_control/src/zmp_calculator/src/: filter.cpp  izmp_calculator.cpp  izmp_calculator_node.cpp  zmp_calculator.cpp  zmp_calculator_node.cpp
catkin_ws/src/MELEW-3/MELEW3_msgs/: CMakeLists.txt  README.md
catkin_ws/src/MELEW-3/MELEW3_msgs/msg/: ImpedanceCommand.msg  LinkInfoArray.msg  Motion.msg  MotionCommand.msg  leg_info.msg  leg_info_set.msg  leg_pose.msg  motor_info.msg  waypoint.msg
catkin_ws/src/MELEW-3/MELEW3_msgs/srv/: FallAvoidanceMotion.srv  robot_config.srv  servo_setting.srv  set_pd_gain.srv  set_position_zero.srv
(+583 files in other folders)
