<?xml version="1.0"?>
<package format="2">
  <name>melew3_bringup</name>
  <version>1.0.0</version>
  <description>The melew3_bringup package</description>

  <maintainer email="t0256sharp2s.rospbl@gmail.com">Taisei Suzuki</maintainer>
  <license>MIT</license>

  <author email="t0256sharp2s.rospbl@gmail.com">Taisei Suzuki</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>MELEW3_control</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>